# epr

./: .gitignore  LICENSE  Makefile  README.md  TODO.org  epr.py  poetry.toml  pyproject.toml  requirement.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: release-pypi.yml  release-win.yml
